# emulebb-build-tests

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  COMMUNITY-COVERAGE.md  README.md  emule-tests.vcxproj  live-process-monitor.example.json  live-wire-inputs.example.json  protocol-parity-surface.json  pyproject.toml
emule_test_harness/: admin_volume_fixtures.py  amule.py  artifact_names.py  build_tests.py  campaign_scenarios.py  community_core_coverage.py  converged_live_wire.py  converged_scenarios.py  cpu_profile.py  diag_event_diff.py  diagnostic_logs.py  doctest_results.py  emule_met_dump.py  goed2k.py  hideme_split_tunnel.py  ini.py  kad_nodes.py  lan_ip_pool.py  live_dependencies.py  live_diff.py  live_e2e_suite.py  live_env.py  live_process_monitor.py  live_profile_seed.py  live_profiles.py  live_seed_sources.py  live_wire_inputs.py  local_swarm_media.py  master_source.py  mfc_diag_adapter.py  mfc_known_met.py  multi_client.py  native_coverage.py  packet_trace_diff.py  paths.py  preference_schema.py  privacy_guard.py  product_family.py  protocol_goldens.py  protocol_surface.py  (+37 more)
include/: TimerResolutionProbe.h
manifests/: README.md  preference-inventory.v1.json  preference-schema.v1.json  protocol-oracle-golden.v1.json  release-live-wire-golden.v1.json
scripts/: admin-volume-cleanup-audit.py  amutorrent-browser-smoke.py  amutorrent-clean-startup.py  amutorrent-emulebb-ui-live.py  amutorrent-interactive-session.py  amutorrent-local-ed2k-ui-live.py  amutorrent-resilience-live.py  analyze-diagnostic-logs.py  analyze-packet-coverage.py  (+101 more)
(+355 files in other folders)
